--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.411.0",
     "next": "14.2.5",
@@ -24,7 +26,6 @@
     "react-dom": "^18",
     "recharts": "^2.13.0-alpha.4",
     "sharp": "^0.33.4",
-    "swiper": "^11.1.9",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
